Replace sun.misc.BASE64Encoder with java.util.Base64.getMimeEncoder
This closes #69